--- a/aribernstein_assignment2.ipynb
+++ b/aribernstein_assignment2.ipynb
@@ -10,6 +10,7 @@
         "## License\n",
         "\n",
         "Copyright 2021 - 2023 Patrick Hall (jphall@gwu.edu)\n",
+        "Modified by Ari Bernstein, 2025\n",
         "\n",
         "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "you may not use this file except in compliance with the License.\n",
